cmd/cloud-hashing-goods/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-goods-appid-userid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-goods-appid-userid
    k8s.kuboard.cn/workload: cloud-hashing-goods-appid-userid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-goods-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_appid_userid_rules
        paths:
          - path: /cloud-hashing-goods
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
    - host: api.xpool.top
      http: *http_appid_userid_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-goods-appid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-goods-appid
    k8s.kuboard.cn/workload: cloud-hashing-goods-appid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-goods-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_appid_rules
        paths:
          - path: /cloud-hashing-goods/check/app
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
    - host: api.xpool.top
      http: *http_appid_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-goods-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-goods-npool
    k8s.kuboard.cn/workload: cloud-hashing-goods-npool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-goods-prefix@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /cloud-hashing-goods/version
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /cloud-hashing-goods/v1/get
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
    - host: api.xpool.top
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-cloud-hashing-goods-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /cloud-hashing-goods
