cmd/cloud-hashing-goods/k8s/03-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-goods-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-goods-traefik-app
    k8s.kuboard.cn/workload: cloud-hashing-goods-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-goods-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-goods/version
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-goods-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-goods-traefik-app-user
    k8s.kuboard.cn/workload: cloud-hashing-goods-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-goods-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-goods/v1/get/devices
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/get/vendor-locations
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/create/device
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/update/device
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/create/vendor-location
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/update/vendor-location
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/get/price-currencys
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/create/price-currency
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/get/fee/types
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/create/fee/type
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/get/fees
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/create/fee
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/create/good
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/update/good
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/get/app
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/get/recommends
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/authorize/app
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
          - path: /api/cloud-hashing-goods/v1/unauthorize/app
            backend:
              serviceName: cloud-hashing-goods
              servicePort: 50020
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
